--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <h6>How are you ??</h6>
     </h1>
     <h2>I'm here to test Github course</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, debitis. Voluptatum deserunt, magni in quod cum dolorem odio corporis consectetur!</p>
   </body>
 </html>
